rimosso .addFirst e .removeFirst e rimessi come prima .add e .remove. Probabilmente mac non li apprrezza.