@@ -1,7 +1,6 @@
 package symbolTable;
 
 import java.util.ArrayList;
-import java.util.NoSuchElementException;
 
 /**
  * La classe {@code Register} gestisce i registri disponibili per l'allocazione durante la generazione del codice <em>dc</em> a partire da un codice <em>ac</em>.
@@ -26,8 +25,8 @@ public class Register {
      */
     public static char newRegister() throws RegisterException {
         try {
-            return registers.removeFirst();
-        } catch (NoSuchElementException e) {
+            return registers.remove(0);
+        } catch (IndexOutOfBoundsException e) {
             throw new RegisterException("Nessun registro disponibile", e);
         }
     }
